--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -10,7 +10,7 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - REDIS_URL=redis://redis_db:6379
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis_db:6379
       - SOCKET_SERVER_URL=http://socket_server:3001
     depends_on:
       redis_db:
@@ -39,7 +39,7 @@ services:
     restart: unless-stopped
     environment:
       - NODE_ENV=production
-      - REDIS_URL=redis://redis_db:6379
+      - REDIS_URL=redis://:${REDIS_PASSWORD}@redis_db:6379
     depends_on:
       redis_db:
         condition: service_healthy
@@ -57,13 +57,11 @@ services:
   redis_db:
     image: redis/redis-stack-server:latest
     restart: unless-stopped
-    ports:
-      - "6379:6379"
     volumes:
       - redis_data:/data
-    command: [ "redis-stack-server", "--appendonly", "yes" ]
+    command: [ "redis-stack-server", "--appendonly", "yes", "--requirepass", "${REDIS_PASSWORD}" ]
     healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
+      test: [ "CMD", "redis-cli", "-a", "${REDIS_PASSWORD}", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
